fan always on, constant speed for ABS+

--- a/switchwire.ini
+++ b/switchwire.ini
@@ -55,11 +55,23 @@ filament_vendor = (Unknown)
 first_layer_bed_temperature = 60
 inherits = 
 min_fan_speed = 50
+filament_deretract_speed = nil
+filament_retract_before_travel = nil
+filament_retract_before_wipe = nil
+filament_retract_layer_change = nil
+filament_retract_length = nil
+filament_retract_lift = nil
+filament_retract_lift_above = nil
+filament_retract_lift_below = nil
+filament_retract_restart_extra = nil
+filament_retract_speed = nil
+filament_settings_id = ""
+filament_wipe = nil
 
 [filament:ABS+ @SWITCHWIRE]
 inherits = *switchwire-common*
 bed_temperature = 90
-bridge_fan_speed = 30
+bridge_fan_speed = 20
 extrusion_multiplier = 0.86
 filament_colour = #B0061C
 filament_density = 1.06
@@ -67,10 +79,11 @@ filament_type = ABS
 first_layer_bed_temperature = 100
 first_layer_temperature = 250
 max_fan_speed = 20
-min_fan_speed = 10
+min_fan_speed = 20
 slowdown_below_layer_time = 15
 start_filament_gcode = "; Filament gcode\nSET_PRESSURE_ADVANCE ADVANCE=0.038\n"
 temperature = 240
+cooling = 0
 
 [filament:PETG @SWITCHWIRE]
 inherits = *switchwire-common*
