prusament ASA profile

--- a/switchwire.ini
+++ b/switchwire.ini
@@ -70,7 +70,7 @@ filament_wipe = nil
 
 [filament:ABS+ @SWITCHWIRE]
 inherits = *switchwire-common*
-bed_temperature = 90
+bed_temperature = 100
 bridge_fan_speed = 20
 extrusion_multiplier = 0.86
 filament_colour = #B0061C
@@ -84,6 +84,25 @@ slowdown_below_layer_time = 15
 start_filament_gcode = "; Filament gcode\nSET_PRESSURE_ADVANCE ADVANCE=0.038\n"
 temperature = 240
 cooling = 0
+
+[filament:Prusament ASA @SWITCHWIRE]
+inherits = *switchwire-common*
+bed_temperature = 100
+bridge_fan_speed = 30
+extrusion_multiplier = 0.88
+filament_colour = #EB9B34
+filament_density = 1.07
+filament_type = ASA
+first_layer_bed_temperature = 100
+first_layer_temperature = 260
+max_fan_speed = 30
+min_fan_speed = 30
+slowdown_below_layer_time = 15
+start_filament_gcode = "; Filament gcode\nSET_PRESSURE_ADVANCE ADVANCE=0.026\n"
+temperature = 260
+cooling = 0
+filament_cost = 34
+filament_spool_weight = 193
 
 [filament:PETG @SWITCHWIRE]
 inherits = *switchwire-common*
