switchwire klipper config broken into files

--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -3,6 +3,11 @@
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_0990FF06410C39AF3B05E95BC42000F5-if00
 
+[include macros.cfg]
+[include menu.cfg]
+
+[respond]
+
 [idle_timeout]
 timeout: 900
 
@@ -15,68 +20,6 @@ aliases:
   EXP2_1=P0.17, EXP2_3=P3.26, EXP2_5=P3.25, EXP2_7=P1.31, EXP2_9=<GND>,
   EXP2_2=P0.15, EXP2_4=P0.16, EXP2_6=P0.18, EXP2_8=<RST>, EXP2_10=<NC>
   # Pins EXP2_1, EXP2_6, EXP2_2 are also MISO, MOSI, SCK of bus "ssp0"
-
-[gcode_macro START_PRINT]
-gcode:
-  {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
-  {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
-
-  # start heating bed
-  M140 S{BED_TEMP}
-  # use absolute coordinates
-  G90
-  # home printer
-  G28
-  # move the nozzle off the bed to heat the bed
-  G1 Z50 F3000
-  # wait for bed to reach temperature
-  M190 S{BED_TEMP}
-  # probe bed
-  BED_MESH_CALIBRATE
-  # move the nozzle off the bed to heat nozzle
-  G1 Z10 X-10 Y-10 F6000
-  # temporary fix for revo heater core, heat nozzle to 200C first
-  #M109 S200
-  # heat nozzle
-  M109 S{EXTRUDER_TEMP}
-
-  # FIXME purge line better, this is just copy/paste prusa
-  G1 Z0.2 X10 Y-5 F6000
-  G92 E0
-  G1 Y60 E9 F1000
-  G1 Y100 E12.5 F1000
-  G92 E0
-  # at end of purge line, retract and z-hop
-  #G1 E-2 F3600
-  #G1 Z0.4 F3000
-
-[gcode_macro END_PRINT]
-gcode:
-  # move nozzle away from print and retract a bit
-  G91
-  G1 E-2 F2400
-  G1 Z15 F3000
-  G90
-  # turn off bed, extruder, fans
-  M140 S0
-  M104 S0
-  M106 S0
-  # push bed forward and center toolhead
-  G1 X110 Y200 F6000
-  # disable steppers
-  M84
-
-[menu __main __octoprint __shutdown]
-type: list
-name: Shutdown
-enable: {not printer.idle_timeout.state == "Printing"}
-
-[menu __main __octoprint __shutdown __confirm]
-type: command
-name: Shutdown Now
-enable: {not printer.idle_timeout.state == "Printing"}
-gcode:
-  {action_respond_info('action:shutdown')}
 
 [printer]
 kinematics: corexz
