slightly less jank start/end movement

--- a/klipper-switchwire/start-end.cfg
+++ b/klipper-switchwire/start-end.cfg
@@ -10,6 +10,7 @@ gcode:
   # home printer
   G28
   # move the nozzle off the bed to heat the bed
+  CENTER
   G1 Z50 F3000
   # wait for bed to reach temperature
   M190 S{BED_TEMP}
@@ -31,15 +32,15 @@ gcode:
 gcode:
   # move nozzle away from print and retract a bit
   G91
-  G1 E-2 F2400
-  G1 Z15 F3000
+  G1 E-0.5 F2400
   G90
+  G1 Z{[printer.toolhead.position.z + 15, printer.toolhead.axis_maximum.z]|min} F3000
   # turn off bed, extruder, fans
   M140 S0
   M104 S0
   M106 S0
   # push bed forward and center toolhead
-  G1 X110 Y200 F6000
+  CENTER Y={printer.toolhead.axis_maximum.y}
   # disable steppers
   M84
 
