add buzzer support to switchwire

--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -161,3 +161,11 @@ en_pin: EXP1_4
 encoder_pins: ^EXP2_5, ^EXP2_3
 click_pin: ^!EXP1_2
 spi_speed: 1000000
+
+[output_pin BEEPER]
+pin: EXP1_1
+pwm: True
+value: 0
+shutdown_value: 0
+# 440 Hz
+cycle_time: 0.00227272727
