--- a/klipper-switchwire/start-end.cfg
+++ b/klipper-switchwire/start-end.cfg
@@ -5,6 +5,9 @@ gcode:
 
   # start heating bed
   M140 S{BED_TEMP}
+  # play a jolly start tone
+  M300 S523
+  M300 S523
   # use absolute coordinates
   G90
   # home printer
@@ -43,6 +46,11 @@ gcode:
   CENTER Y={printer.toolhead.axis_maximum.y}
   # disable steppers
   M84
+  # play a jolly end tone
+  M300 S523
+  M300 S466
+  M300 S494
+  M300 S523 P1000
 
 [gcode_macro START_PRINT]
 gcode:
