added a heatsoak macro

--- a/klipper-switchwire/menu.cfg
+++ b/klipper-switchwire/menu.cfg
@@ -1,3 +1,15 @@
+# setting lcd text also echos to console
+[gcode_macro M117]
+rename_existing: M117.1
+gcode:
+  {% if rawparams %}
+    {% set escaped_msg = rawparams.split(';', 1)[0].split('\x23', 1)[0]|replace('"', '\\"') %}
+    SET_DISPLAY_TEXT MSG="{escaped_msg}"
+    RESPOND MSG="{escaped_msg}"
+  {% else %}
+    SET_DISPLAY_TEXT
+  {% endif %}
+
 # shutdown with confirm
 [menu __main __octoprint __shutdown]
 type: list
@@ -11,3 +23,19 @@ name: Shutdown Now
 enable: {not printer.idle_timeout.state == "Printing"}
 gcode:
   {action_respond_info('action:shutdown')}
+
+# heat soak
+[menu __main __temp __heatsoak]
+type: command
+name: Heat Soak
+enable: {printer['gcode_macro HEAT_SOAK'].stage not in ('heating', 'soaking')}
+gcode:
+  HEAT_SOAK
+
+# cancel heat soak
+[menu __main __temp __cancelheatsoak]
+type: command
+name: Cancel Heat Soak
+enable: {printer['gcode_macro HEAT_SOAK'].stage in ('heating', 'soaking')}
+gcode:
+  CANCEL_HEAT_SOAK
