--- a/klipper-switchwire/movement.cfg
+++ b/klipper-switchwire/movement.cfg
@@ -3,4 +3,9 @@ gcode:
   {% set x = params.X|default(110)|float %}
   {% set y = params.Y|default(110)|float %}
   {% set f = params.F|default(6000)|float %}
-  G1 X{x} Y{y} F{f}
+  {% if params.Z is defined %}
+     {% set z = params.Z|float %}
+     G1 X{x} Y{y} Z{z} F{f}
+  {% else %}
+    G1 X{x} Y{y} F{f}
+  {% endif %}
