--- a/klipper-switchwire/start-end.cfg
+++ b/klipper-switchwire/start-end.cfg
@@ -13,8 +13,7 @@ gcode:
   # home printer
   G28
   # move the nozzle off the bed to heat the bed
-  CENTER
-  G1 Z50 F3000
+  CENTER Z=50
   # wait for bed to reach temperature
   M190 S{BED_TEMP}
   # probe bed
