--- a/klipper-switchwire/menu.cfg
+++ b/klipper-switchwire/menu.cfg
@@ -24,6 +24,25 @@ enable: {not printer.idle_timeout.state == "Printing"}
 gcode:
   {action_respond_info('action:shutdown')}
 
+# better ABS temps
+[menu __main __temp __preheat_abs __all]
+type: command
+enable: {('extruder' in printer) and ('heater_bed' in printer)}
+name: Preheat all
+gcode:
+    M140 S100
+    M104 S245
+[menu __main __temp __preheat_abs __hotend]
+type: command
+enable: {'extruder' in printer}
+name: Preheat hotend
+gcode: M104 S245
+[menu __main __temp __preheat_abs __hotbed]
+type: command
+enable: {'heater_bed' in printer}
+name: Preheat hotbed
+gcode: M140 S100
+
 # heat soak
 [menu __main __temp __heatsoak]
 type: command
