menu order and timeout

--- a/klipper-switchwire/menu.cfg
+++ b/klipper-switchwire/menu.cfg
@@ -47,6 +47,7 @@ gcode: M140 S100
 [menu __main __temp __heatsoak]
 type: command
 name: Heat Soak
+index: 3
 enable: {printer['gcode_macro HEAT_SOAK'].stage not in ('heating', 'soaking')}
 gcode:
   HEAT_SOAK
@@ -55,6 +56,7 @@ gcode:
 [menu __main __temp __cancelheatsoak]
 type: command
 name: Cancel Heat Soak
+index: 4
 enable: {printer['gcode_macro HEAT_SOAK'].stage in ('heating', 'soaking')}
 gcode:
   CANCEL_HEAT_SOAK
