--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -161,6 +161,7 @@ en_pin: EXP1_4
 encoder_pins: ^EXP2_5, ^EXP2_3
 click_pin: ^!EXP1_2
 spi_speed: 1000000
+menu_timeout: 60
 
 [output_pin BEEPER]
 pin: EXP1_1
