add octoprint upload directory as sd card

--- a/klipper-switchwire/menu.cfg
+++ b/klipper-switchwire/menu.cfg
@@ -10,6 +10,18 @@ gcode:
     SET_DISPLAY_TEXT
   {% endif %}
 
+# let user print gcode files from octoprint upload directory
+[virtual_sdcard]
+path: /home/pi/.octoprint/uploads/
+
+# uses this patch to sort by new
+# https://github.com/Klipper3d/klipper/issues/5388
+[menu __main __sdcard]
+type: vsdlist
+enable: {('virtual_sdcard' in printer)}
+name: SD Card
+newfirst: true
+
 # shutdown with confirm
 [menu __main __octoprint __shutdown]
 type: list
