--- a/klipper-switchwire/start-end.cfg
+++ b/klipper-switchwire/start-end.cfg
@@ -25,6 +25,10 @@ gcode:
 
   # FIXME purge line better, this is just copy/paste prusa
   G1 Z0.2 X10 Y-5 F6000
+  # unretract
+  G92 E0
+  G1 E4 F1000
+  # purge
   G92 E0
   G1 Y60 E9 F1000
   G1 Y100 E12.5 F1000
@@ -32,9 +36,9 @@ gcode:
 
 [gcode_macro PRINT_END]
 gcode:
-  # move nozzle away from print and retract a bit
+  # move nozzle away from print and retract enough to remove filament
   G91
-  G1 E-0.5 F2400
+  G1 E-4 F2400
   G90
   G1 Z{[printer.toolhead.position.z + 15, printer.toolhead.axis_maximum.z]|min} F3000
   # turn off bed, extruder, fans
