add start and end jingle macros, use in heat soak too

--- a/klipper-switchwire/beeper.cfg
+++ b/klipper-switchwire/beeper.cfg
@@ -6,3 +6,15 @@ gcode:
   SET_PIN PIN=BEEPER VALUE=0.5 CYCLE_TIME={ 1.0 / S if S > 0 else 1 }
   G4 P{P}
   SET_PIN PIN=BEEPER VALUE=0
+
+[gcode_macro JINGLE_START]
+gcode:
+  M300 S523
+  M300 S523
+
+[gcode_macro JINGLE_END]
+gcode:
+  M300 S523
+  M300 S466
+  M300 S494
+  M300 S523 P1000
