--- a/klipper-switchwire/heat-soak.cfg
+++ b/klipper-switchwire/heat-soak.cfg
@@ -29,6 +29,8 @@ gcode:
   CENTER Z=50
   # turn off steppers
   M84
+  # play a jolly start tone
+  JINGLE_START
   # start periodic check
   UPDATE_DELAYED_GCODE ID=heat_soaker DURATION={check_interval}
 
@@ -80,6 +82,8 @@ gcode:
       M117 Soaked.
       # FIXME this should also work in octopod, but it doesn't
       {action_respond_info("action:notification Heat soak complete after %.1fm" | format(total_time_elapsed / 60.0))}
+      # play a jolly end tone
+      JINGLE_END
     {% endif %}
 
     SET_GCODE_VARIABLE MACRO=HEAT_SOAK VARIABLE=target_temp VALUE=0
