--- a/klipper-switchwire/start-end.cfg
+++ b/klipper-switchwire/start-end.cfg
@@ -5,9 +5,6 @@ gcode:
 
   # start heating bed
   M140 S{BED_TEMP}
-  # play a jolly start tone
-  M300 S523
-  M300 S523
   # use absolute coordinates
   G90
   # home printer
@@ -22,6 +19,8 @@ gcode:
   G1 Z10 X-10 Y-10 F6000
   # heat nozzle
   M109 S{EXTRUDER_TEMP}
+  # play a jolly start tone
+  JINGLE_START
 
   # FIXME purge line better, this is just copy/paste prusa
   G1 Z0.2 X10 Y-5 F6000
@@ -50,10 +49,7 @@ gcode:
   # disable steppers
   M84
   # play a jolly end tone
-  M300 S523
-  M300 S466
-  M300 S494
-  M300 S523 P1000
+  JINGLE_END
 
 [gcode_macro START_PRINT]
 gcode:
