z probe offset madness

--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -41,9 +41,23 @@ y_offset: 22.5
 #z_offset: 0.825
 #z_offset: 0.875
 #z_offset: 0.965
-z_offset: 1.005
+# this is the old probe before it died
+#z_offset: 1.005
 # this is what calibrate said but it seems like even *more* squish
 #z_offset: 1.150
+
+# measured
+#z_offset: 1.337
+# first night good layer
+#z_offset: 1.737
+# second day good layer, mostly good mostly still but a bit squish
+# why is this so inconsistent??
+#z_offset: 1.537
+# ok trying this again
+# slightly undersquished, adhesion problems
+#z_offset: 1.337
+# very very slight squish, probably good to within bed probe accuracy
+z_offset: 1.437
 
 [bed_mesh]
 speed: 200
