--- a/switchwire.ini
+++ b/switchwire.ini
@@ -1,7 +1,8 @@
 [print:*switchwire-common*]
 bridge_speed = 80
 compatible_printers = "Switchwire (0.4mm nozzle, red)"
-compatible_printers_condition = 
+compatible_printers_condition = printer_model=~/Switchwire/
+draft_shield = enabled
 external_perimeter_extrusion_width = 0.4
 external_perimeter_speed = 40
 extrusion_width = 0.4
@@ -31,20 +32,25 @@ top_solid_infill_speed = 40
 travel_speed = 300
 travel_speed_z = 50
 
-[print:0.2mm @SWITCHWIRE]
+[print:0.2mm]
 inherits = *switchwire-common*
 
-[print:0.2 Voron @SWITCHWIRE]
+[print:0.2mm Voron]
 inherits = *switchwire-common*
 fill_density = 40%
 bottom_solid_layers = 5
 perimeters = 4
 top_solid_layers = 5
 
+[print:0.2mm Rocket]
+inherits = *switchwire-common*
+bottom_solid_layers = 2
+top_solid_layers = 2
+
 [filament:*switchwire-common*]
 bed_temperature = 60
-compatible_printers = "Switchwire (0.4mm nozzle, red)"
-compatible_printers_condition =
+compatible_printers =
+compatible_printers_condition = printer_model=~/Switchwire/
 compatible_prints =
 compatible_prints_condition =
 fan_always_on = 1
@@ -59,23 +65,30 @@ filament_retract_before_travel = nil
 filament_retract_before_wipe = nil
 filament_retract_layer_change = nil
 filament_retract_length = nil
+filament_retract_length_toolchange = nil
 filament_retract_lift = nil
 filament_retract_lift_above = nil
 filament_retract_lift_below = nil
 filament_retract_restart_extra = nil
+filament_retract_restart_extra_toolchange = nil
 filament_retract_speed = nil
+filament_travel_lift_before_obstacle = nil
+filament_travel_max_lift = nil
+filament_travel_ramping_lift = nil
+filament_travel_slope = nil
 filament_settings_id = ""
 filament_wipe = nil
 
-[filament:ABS+ @SWITCHWIRE]
+# calibrated for eSun ABS+
+[filament:ABS+]
 inherits = *switchwire-common*
-bed_temperature = 100
+bed_temperature = 110
 bridge_fan_speed = 20
 extrusion_multiplier = 0.86
 filament_colour = #B0061C
 filament_density = 1.06
 filament_type = ABS
-first_layer_bed_temperature = 100
+first_layer_bed_temperature = 105
 first_layer_temperature = 250
 max_fan_speed = 20
 min_fan_speed = 20
@@ -84,15 +97,16 @@ start_filament_gcode = "; Filament gcode\nSET_PRESSURE_ADVANCE ADVANCE=0.038\n"
 temperature = 240
 cooling = 0
 
-[filament:Prusament ASA @SWITCHWIRE]
+# calibrated for Prusament ASA
+[filament:ASA]
 inherits = *switchwire-common*
-bed_temperature = 100
+bed_temperature = 110
 bridge_fan_speed = 30
 extrusion_multiplier = 0.88
 filament_colour = #EB9B34
 filament_density = 1.07
 filament_type = ASA
-first_layer_bed_temperature = 100
+first_layer_bed_temperature = 105
 first_layer_temperature = 260
 max_fan_speed = 30
 min_fan_speed = 30
@@ -103,16 +117,17 @@ cooling = 0
 filament_cost = 34
 filament_spool_weight = 193
 
-[filament:PETG @SWITCHWIRE]
+[filament:PETG]
 inherits = *switchwire-common*
 bed_temperature = 80
+filament_colour = #A7DDB2
 filament_type = PET
 first_layer_bed_temperature = 80
 first_layer_temperature = 230
 max_fan_speed = 60
 temperature = 230
 
-[filament:PLA @SWITCHWIRE]
+[filament:PLA]
 inherits = *switchwire-common*
 
 [printer:*switchwire-common*]
@@ -134,6 +149,7 @@ machine_max_feedrate_z = 50,12
 max_print_height = 220
 print_host = 
 printer_settings_id = 
+printer_model = Switchwire
 printer_variant = 
 printer_vendor = 
 printhost_apikey = 
