new textured pei plate, new z_offset meddling

--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -57,7 +57,26 @@ y_offset: 22.5
 # slightly undersquished, adhesion problems
 #z_offset: 1.337
 # very very slight squish, probably good to within bed probe accuracy
-z_offset: 1.437
+# this is what I used for buildtak plates
+#z_offset: 1.437
+
+# now to no-name textured PEI plate
+# barely sticks
+#z_offset: 1.5
+# better stickage, retains curves on skirt
+#z_offset: 1.6
+# seems like barely not enough adhesion
+#z_offset: 1.7
+# this change did basically nothing, go whole hog next
+#z_offset: 1.75
+# part sticks well (though some corner lifting) but skirt does not
+#z_offset: 1.85
+# just a little bit of elephant's foot, try to dial it back (otherwise great)
+#z_offset: 1.9
+# whoah actually a fair amount of elephants foot on a new heat soak cycle, dial it back
+#z_offset: 1.87
+# some elephant's foot, barely, some corner lifting on skirt, this is a good medium
+z_offset: 1.85
 
 [bed_mesh]
 speed: 200
