--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -89,9 +89,20 @@ fade_start: 1
 fade_end: 10
 
 [stepper_x]
-step_pin: P2.2
-dir_pin: P2.6
-enable_pin: !P2.1
+# port labeled X on my control board is acting funky
+# (spontaneous resets) so use E1 instead.
+# (This might be fixed with a fixed bed cable.)
+
+# label X
+#step_pin: P2.2
+#dir_pin: P2.6
+#enable_pin: !P2.1
+
+# label E1
+step_pin: P0.1
+dir_pin: P0.0
+enable_pin: !P0.10
+
 microsteps: 16
 rotation_distance: 40
 endstop_pin: P1.29  # P1.28 for X-max
@@ -101,7 +112,12 @@ position_max: 233
 homing_speed: 50
 
 [tmc2208 stepper_x]
-uart_pin: P1.17
+# label X
+#uart_pin: P1.17
+
+# label E1
+uart_pin: P1.1
+
 run_current: 0.800
 #stealthchop_threshold: 999999
 
