tune down heater gain a bit for slower bed

--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -191,6 +191,10 @@ pid_kp: 314.07
 pid_ki: 60.86
 pid_kd: 405.23
 
+# bed is slow, I think I broke it repairing the cable
+[verify_heater heater_bed]
+heating_gain: 1.0
+
 [fan]
 pin: P2.3
 kick_start_time: 0.25
