--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -193,7 +193,8 @@ pid_kd: 405.23
 
 # bed is slow, I think I broke it repairing the cable
 [verify_heater heater_bed]
-heating_gain: 1.0
+# normally 2.0 (yes, really)
+heating_gain: 0.6
 
 [fan]
 pin: P2.3
