initial definitions for stealthburner toolhead

--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -2,9 +2,15 @@
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_0990FF06410C39AF3B05E95BC42000F5-if00
 
+# Fly SB2040 v2
+[mcu sb]
+canbus_uuid: d271aa8d05c3
+
 [include boards/*.cfg]
 [include macros/*.cfg]
 [include menu.cfg]
+
+[include stealthburner.cfg]
 
 [respond]
 
