stealthburner extruder and heater

--- a/klipper-switchwire/stealthburner.cfg
+++ b/klipper-switchwire/stealthburner.cfg
@@ -27,38 +27,40 @@ pin: sb:RGBLED
 chain_count: 3
 color_order: GRBW
 
-[fan_generic partfan]
+# part fan
+[fan]
 pin: sb:FAN0
+kick_start_time: 0.25
 
-[fan_generic heaterfan]
+[heater_fan extruder_fan]
 pin: sb:FAN1
+heater: extruder
+heater_temp: 50.0
 
 # FIXME these calibration bits, gear ratio, etc. are dummy values
-[manual_stepper sb]
+[extruder]
 step_pin: sb:EXT_STEP
-dir_pin: !sb:EXT_DIR
+dir_pin: sb:EXT_DIR
 enable_pin: !sb:EXT_EN
-rotation_distance: 22.67895
-gear_ratio: 50:10
 microsteps: 16
+gear_ratio: 50:10
+rotation_distance: 22.095082394054998
 full_steps_per_rotation: 200
-#max_extrude_only_distance: 1000
-#max_extrude_only_velocity: 50
-#max_extrude_only_accel: 1500
-#nozzle_diameter: 0.4
-#filament_diameter: 1.75
-#heater_pin: sb:HE0
-#sensor_pin: sb:TH0
-#sensor_type: ATC Semitec 104GT-2
-#control: pid
-#pid_kp: 26.213
-#pid_ki: 1.304
-#pid_kd: 131.721
-#min_temp: -273
-#max_temp: 300
-#min_extrude_temp: -273
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+heater_pin: sb:HE0
+sensor_type: ATC Semitec 104NT-4-R025H42G
+sensor_pin: sb:TH0
+control: pid
+pid_Kp: 23.04
+pid_Ki: 4.35
+pid_Kd: 30.50
+min_temp: 0
+max_temp: 300
+# a bit higher than default for pressure advance test
+max_extrude_cross_section: 1
 
-[tmc2209 manual_stepper sb]
+[tmc2209 extruder]
 uart_pin: sb:EXT_UART
 stealthchop_threshold: 0
 run_current: 0.30
