add X endstop and Z probe initial configuration

--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -30,50 +30,6 @@ home_xy_position: 110, 90
 speed: 200
 z_hop: 3
 
-[probe]
-pin: P1.25  # P1.24 for Z-max
-x_offset: 0.0
-y_offset: 22.5
-#z_offset: 0.825
-#z_offset: 0.875
-#z_offset: 0.965
-# this is the old probe before it died
-#z_offset: 1.005
-# this is what calibrate said but it seems like even *more* squish
-#z_offset: 1.150
-
-# measured
-#z_offset: 1.337
-# first night good layer
-#z_offset: 1.737
-# second day good layer, mostly good mostly still but a bit squish
-# why is this so inconsistent??
-#z_offset: 1.537
-# ok trying this again
-# slightly undersquished, adhesion problems
-#z_offset: 1.337
-# very very slight squish, probably good to within bed probe accuracy
-# this is what I used for buildtak plates
-#z_offset: 1.437
-
-# now to no-name textured PEI plate
-# barely sticks
-#z_offset: 1.5
-# better stickage, retains curves on skirt
-#z_offset: 1.6
-# seems like barely not enough adhesion
-#z_offset: 1.7
-# this change did basically nothing, go whole hog next
-#z_offset: 1.75
-# part sticks well (though some corner lifting) but skirt does not
-#z_offset: 1.85
-# just a little bit of elephant's foot, try to dial it back (otherwise great)
-#z_offset: 1.9
-# whoah actually a fair amount of elephants foot on a new heat soak cycle, dial it back
-#z_offset: 1.87
-# some elephant's foot, barely, some corner lifting on skirt, this is a good medium
-z_offset: 1.85
-
 [bed_mesh]
 speed: 200
 horizontal_move_z: 5
@@ -101,7 +57,7 @@ enable_pin: !P0.10
 
 microsteps: 16
 rotation_distance: 40
-endstop_pin: P1.29  # P1.28 for X-max
+endstop_pin: sb:LIMIT_2
 position_endstop: 233
 position_min: -17
 position_max: 233
