--- a/klipper-switchwire/stealthburner.cfg
+++ b/klipper-switchwire/stealthburner.cfg
@@ -64,3 +64,9 @@ max_extrude_cross_section: 1
 uart_pin: sb:EXT_UART
 stealthchop_threshold: 0
 run_current: 0.30
+
+[probe]
+pin: sb:LIMIT_1
+x_offset: 0.0 # FIXME
+y_offset: 22.5 # FIXME
+z_offset: 1.85 # FIXME
