--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -30,6 +30,22 @@ home_xy_position: 110, 90
 speed: 200
 z_hop: 3
 
+[servo probe_dock]
+pin: P2.0
+maximum_servo_angle: 180
+minimum_pulse_width: 0.00025
+maximum_pulse_width: 0.0024
+
+# start values
+#deploy: 40
+#retract: 80
+[gcode_macro _servo_test_angle]
+gcode:
+    {% set ANGLE = params.ANGLE|int %}
+    SET_SERVO SERVO=probe_dock ANGLE={ANGLE}
+    G4 P250
+    SET_SERVO SERVO=probe_dock WIDTH=0.0
+
 [bed_mesh]
 speed: 200
 horizontal_move_z: 5
