update probe info, use 64 microsteps to help probe

--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -37,8 +37,10 @@ minimum_pulse_width: 0.00025
 maximum_pulse_width: 0.0024
 
 # start values
-#deploy: 40
-#retract: 80
+# deploy angle: 35
+# retract angle: 85
+# dock at X=190
+# servo not strong enough to retract
 [gcode_macro _servo_test_angle]
 gcode:
     {% set ANGLE = params.ANGLE|int %}
@@ -71,7 +73,7 @@ step_pin: P0.1
 dir_pin: P0.0
 enable_pin: !P0.10
 
-microsteps: 16
+microsteps: 64
 rotation_distance: 40
 endstop_pin: sb:LIMIT_2
 position_endstop: 233
@@ -93,7 +95,7 @@ run_current: 0.800
 step_pin: P0.19
 dir_pin: P0.20
 enable_pin: !P2.8
-microsteps: 16
+microsteps: 64
 rotation_distance: 40
 endstop_pin: P1.27  # P1.26 for Y-max
 position_endstop: 227
@@ -110,7 +112,7 @@ run_current: 0.800
 step_pin: P0.22
 dir_pin: P2.11
 enable_pin: !P0.21
-microsteps: 16
+microsteps: 64
 rotation_distance: 40
 endstop_pin: probe:z_virtual_endstop
 position_min: -5
