more complete board pins definitions

--- a/klipper-switchwire/boards/btt-skr13.cfg
+++ b/klipper-switchwire/boards/btt-skr13.cfg
@@ -1,11 +1,50 @@
 # BTT SKR v1.3
+# names from the schematic, mostly. exceptions noted.
+# https://github.com/bigtreetech/BIGTREETECH-SKR-V1.3/blob/b238aa4/BTT%20SKR%20V1.3/hardware/SKR-V1.3-SCH.pdf
 
 [board_pins]
 aliases:
-  # EXP1 header
+aliases_temps:
+    TH1=P0.25,TH0=P0.24,THB=P0.23
+aliases_endstops:
+    ZP=P1.24,ZM=P1.25,YP=P1.26,YM=P1.27,XP=P1.28,XM=P1.29
+aliases_extruder1:
+    E1DIR=P0.0,E1STP=P0.1,E1EN=P0.10
+aliases_extruder0:
+    E0DIR=P0.11,E0STP=P2.13,E0EN=P2.12
+aliases_zaxis:
+    ZDIR=P2.11,ZSTP=P0.22,ZEN=P0.21
+aliases_yaxis:
+    YDIR=P0.20,YSTP=P0.19,YEN=P2.8
+aliases_spi0:
+    MOSI0=P0.18,MISO0=P0.17,SCK0=P0.15,SSEL0=P0.16
+aliases_heaters: # named HE0 and HE1 as that's on silkscreen
+    HE0_PWM=P2.7,HB_PWM=P2.5,HE1_PWM=P2.4
+aliases_xaxis:
+    XDIR=P2.6,XSTP=P2.2,XEN=P2.1
+aliases_fan:
+    FAN_PWM=P2.3
+aliases_servo:
+    SERVO=P2.0
+aliases_spi1: # connected to SD card
+    MOSI1=P0.9,MISO1=P0.8,SCK1=P0.7,SSEL1=P0.6,SD_DAT2=P0.27
+aliases_motor_spi:
+    MOT_MISO=P0.5,MOT_SCK=P0.4,MOT_MOSI=P4.28,
+    # spi chip selects are also aliased with uart rx
+    X_CS=P1.17,Y_CS=P1.15,Z_CS=P1.10,E0_CS=P1.8,E1_CS=P1.1
+aliases_motor_uart:
+    # uart rx is aliased with spi chip selects
+    X_TX=P4.29,X_RX=P1.17,Y_TX=P1.16,Y_RX=P1.15,Z_TX=P1.14,Z_RX=P1.10,
+    E0_TX=P1.9,E0_RX=P1.8,E1_TX=P1.4,E1_RX=P1.1
+aliases_uart0:
+    TXD0=P0.2,RXD0=P0.3
+
+aliases_exp1:
+  # pin numbers are reverse order of schematic, to match code elsewhere
   EXP1_1=P1.30, EXP1_3=P1.18, EXP1_5=P1.20, EXP1_7=P1.22, EXP1_9=<GND>,
   EXP1_2=P0.28, EXP1_4=P1.19, EXP1_6=P1.21, EXP1_8=P1.23, EXP1_10=<5V>,
-  # EXP2 header
+aliases_exp2:
+  # pin numbers are reverse order of schematic, to match code elsewhere
   EXP2_1=P0.17, EXP2_3=P3.26, EXP2_5=P3.25, EXP2_7=P1.31, EXP2_9=<GND>,
   EXP2_2=P0.15, EXP2_4=P0.16, EXP2_6=P0.18, EXP2_8=<RST>, EXP2_10=<NC>
-  # Pins EXP2_1, EXP2_6, EXP2_2 are also MISO, MOSI, SCK of bus "ssp0"
+  # Pins 1, 2, 4, and 6 are also MISO0, SCK0, SSEL0, and MOSI0
