--- a/klipper-switchwire/boards/fly-sb2040.cfg
+++ b/klipper-switchwire/boards/fly-sb2040.cfg
@@ -1,19 +1,26 @@
-## SB2040 ALIASES
-# https://mellow-3d.github.io/fly-sb2040_klipper_config.html
+# Mellow Fly SB2040 v2
+# names from the schematic
+# https://github.com/Mellow-3D/Fly-SB2040/blob/8a4803d/V2/Hardware/SB2040-V2_Schematic.pdf
 [board_pins sb]
 mcu: sb
 aliases:
-aliases_2209:
-    EXT_EN=gpio7,EXT_STEP=gpio9,EXT_DIR=gpio10,EXT_UART=gpio8
-aliases_endstop:
-    LIMIT_0=gpio25,LIMIT_1=gpio28,LIMIT_2=gpio29
-aliases_cnc_fans:
-    FAN0=gpio13,FAN1=gpio14,FAN2=gpio15
-aliases_thermistors:
-    TH0=gpio27,TH1=gpio26
+aliases_spi1: # connected to ADXL
+    SPI1_SCK=gpio0,SPI1_CS=gpio1,SPI1_MISO=gpio2,SPI1_MOSI=gpio3
 aliases_heaters:
-    HE0=gpio6
+    HEAT=gpio6
+aliases_extruder:
+    E_EN=gpio7,E_UART=gpio8,E_STEP=gpio9,E_DIR=gpio10,E_CS=gpio11
 aliases_rgb:
-    RGBLED=gpio12
+    RGB0=gpio12
+aliases_fans:
+    FAN0=gpio13,FAN1=gpio14,FAN2=gpio15,PWM0=gpio16,PWM1=gpio17
+aliases_max: # thermocouple
+    MAXSPI_SCK=gpio18,MAXSPI_MOSI=gpio19,MAXSPI_CS=gpio22,MAXSPI_MISO=gpio23
 aliases_adxl:
-    ADXL=gpio1
+    ADXL_INT2=gpio20,ADXL_INT1=gpio21
+aliases_status: # status LED
+    STATUS=gpio24
+aliases_endstops:
+    ENDSTOP2=gpio25,ENDSTOP0=gpio28,ENDSTOP1=gpio29
+aliases_temps:
+    NTC=gpio26,TEMP=gpio27
