--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -31,7 +31,7 @@ speed: 200
 z_hop: 3
 
 [servo probe_dock]
-pin: P2.0
+pin: SERVO
 maximum_servo_angle: 180
 minimum_pulse_width: 0.00025
 maximum_pulse_width: 0.0024
@@ -64,18 +64,18 @@ fade_end: 10
 # (This might be fixed with a fixed bed cable.)
 
 # label X
-#step_pin: P2.2
-#dir_pin: P2.6
-#enable_pin: !P2.1
+#step_pin: XSTP
+#dir_pin: XDIR
+#enable_pin: !XEN
 
 # label E1
-step_pin: P0.1
-dir_pin: P0.0
-enable_pin: !P0.10
+step_pin: E1STP
+dir_pin: E1DIR
+enable_pin: !E1EN
 
 microsteps: 64
 rotation_distance: 40
-endstop_pin: sb:LIMIT_2
+endstop_pin: sb:ENDSTOP1
 position_endstop: 233
 position_min: -17
 position_max: 233
@@ -83,35 +83,35 @@ homing_speed: 50
 
 [tmc2208 stepper_x]
 # label X
-#uart_pin: P1.17
+#uart_pin: X_RX
 
 # label E1
-uart_pin: P1.1
+uart_pin: E1_RX
 
 run_current: 0.800
 #stealthchop_threshold: 999999
 
 [stepper_y]
-step_pin: P0.19
-dir_pin: P0.20
-enable_pin: !P2.8
+step_pin: YSTP
+dir_pin: YDIR
+enable_pin: !YEN
 microsteps: 64
 rotation_distance: 40
-endstop_pin: P1.27  # P1.26 for Y-max
+endstop_pin: YM  # YP for Y-max
 position_endstop: 227
 position_min: -23
 position_max: 227
 homing_speed: 50
 
 [tmc2208 stepper_y]
-uart_pin: P1.15
+uart_pin: Y_RX
 run_current: 0.800
 #stealthchop_threshold: 999999
 
 [stepper_z]
-step_pin: P0.22
-dir_pin: P2.11
-enable_pin: !P0.21
+step_pin: ZSTP
+dir_pin: ZDIR
+enable_pin: !ZEN
 microsteps: 64
 rotation_distance: 40
 endstop_pin: probe:z_virtual_endstop
@@ -120,14 +120,14 @@ position_max: 220
 homing_speed: 50
 
 [tmc2208 stepper_z]
-uart_pin: P1.10
+uart_pin: Z_RX
 run_current: 0.800
 #stealthchop_threshold: 999999
 
 [heater_bed]
-heater_pin: P2.5
+heater_pin: HB_PWM
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: P0.23
+sensor_pin: THB
 min_temp: 0
 max_temp: 130
 control: pid
