--- a/klipper-switchwire/stealthburner.cfg
+++ b/klipper-switchwire/stealthburner.cfg
@@ -8,22 +8,22 @@ sensor_mcu: sb
 [temperature_sensor SB]
 gcode_id: SB
 sensor_type: NTC 100K MGB18-104F39050L32
-sensor_pin: sb:gpio26
+sensor_pin: sb:NTC
 
 # toolhead accelerometer
 [adxl345 sb]
-cs_pin: sb:ADXL
-spi_software_sclk_pin: sb:gpio0
-spi_software_mosi_pin: sb:gpio3
-spi_software_miso_pin: sb:gpio2
+cs_pin: sb:SPI1_CS
+spi_software_sclk_pin: sb:SPI1_SCK
+spi_software_mosi_pin: sb:SPI1_MOSI
+spi_software_miso_pin: sb:SPI1_MISO
 
 # status led
 [led status]
-white_pin: sb:gpio24
+white_pin: sb:STATUS
 
 # rgb leds
 [neopixel toolhead]
-pin: sb:RGBLED
+pin: sb:RGB0
 chain_count: 3
 color_order: GRBW
 
@@ -39,18 +39,18 @@ heater_temp: 50.0
 
 # FIXME these calibration bits, gear ratio, etc. are dummy values
 [extruder]
-step_pin: sb:EXT_STEP
-dir_pin: sb:EXT_DIR
-enable_pin: !sb:EXT_EN
+step_pin: sb:E_STEP
+dir_pin: sb:E_DIR
+enable_pin: !sb:E_EN
 microsteps: 16
 gear_ratio: 50:10
 rotation_distance: 22.095082394054998
 full_steps_per_rotation: 200
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-heater_pin: sb:HE0
+heater_pin: sb:HEAT
 sensor_type: ATC Semitec 104NT-4-R025H42G
-sensor_pin: sb:TH0
+sensor_pin: sb:TEMP
 control: pid
 pid_Kp: 23.04
 pid_Ki: 4.35
@@ -61,12 +61,12 @@ max_temp: 300
 max_extrude_cross_section: 1
 
 [tmc2209 extruder]
-uart_pin: sb:EXT_UART
+uart_pin: sb:E_UART
 stealthchop_threshold: 0
 run_current: 0.30
 
 [probe]
-pin: sb:LIMIT_1
+pin: sb:ENDSTOP0
 x_offset: 0.0 # FIXME
 y_offset: 22.5 # FIXME
 z_offset: 1.85 # FIXME
