working probe dock and macros

--- a/klipper-switchwire/macros/start-end.cfg
+++ b/klipper-switchwire/macros/start-end.cfg
@@ -8,13 +8,15 @@ gcode:
   # use absolute coordinates
   G90
   # home printer
-  G28
+  G28 KEEP_PROBE
   # move the nozzle off the bed to heat the bed
   CENTER Z=50
   # wait for bed to reach temperature
   M190 S{BED_TEMP}
   # probe bed
   BED_MESH_CALIBRATE
+  # stash probe
+  DOCK_PROBE
   # move the nozzle off the bed to heat nozzle
   G1 Z10 X-10 Y-10 F6000
   # heat nozzle
