--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -11,6 +11,7 @@ canbus_uuid: d271aa8d05c3
 [include menu.cfg]
 
 [include stealthburner.cfg]
+[include probe.cfg]
 
 [respond]
 
@@ -23,40 +24,6 @@ max_velocity: 300
 max_accel: 2000
 max_z_velocity: 50
 max_z_accel: 1000
-
-[safe_z_home]
-# account for Y offset of Z probe to reach center
-home_xy_position: 110, 90
-speed: 200
-z_hop: 3
-
-[servo probe_dock]
-pin: SERVO
-maximum_servo_angle: 180
-minimum_pulse_width: 0.00025
-maximum_pulse_width: 0.0024
-
-# start values
-# deploy angle: 35
-# retract angle: 85
-# dock at X=190
-# servo not strong enough to retract
-[gcode_macro _servo_test_angle]
-gcode:
-    {% set ANGLE = params.ANGLE|int %}
-    SET_SERVO SERVO=probe_dock ANGLE={ANGLE}
-    G4 P250
-    SET_SERVO SERVO=probe_dock WIDTH=0.0
-
-[bed_mesh]
-speed: 200
-horizontal_move_z: 5
-mesh_min: 10, 10
-mesh_max: 210, 210
-probe_count: 6, 6
-algorithm: bicubic
-fade_start: 1
-fade_end: 10
 
 [stepper_x]
 # port labeled X on my control board is acting funky
@@ -118,6 +85,7 @@ endstop_pin: probe:z_virtual_endstop
 position_min: -5
 position_max: 220
 homing_speed: 50
+second_homing_speed: 10
 
 [tmc2208 stepper_z]
 uart_pin: Z_RX
