--- a/klipper-switchwire/probe.cfg
+++ b/klipper-switchwire/probe.cfg
@@ -27,11 +27,12 @@ maximum_pulse_width: 0.0024
 
 [bed_mesh]
 speed: 200
-horizontal_move_z: 10
+horizontal_move_z: 8.5
 # avoid recesses in screw corners
 mesh_min: 10, 20
 mesh_max: 210, 200
-probe_count: 6, 6
+# odd number on Y ensures we end near dock
+probe_count: 5, 5
 algorithm: bicubic
 fade_start: 1
 fade_end: 10
