use z_hop in dock/undock if z is homed

--- a/klipper-switchwire/probe.cfg
+++ b/klipper-switchwire/probe.cfg
@@ -11,7 +11,6 @@ variable_dock_delay:   250   # ms to keep servo on
 variable_dock_wait:     50   # ms to wait for servo to settle
 variable_dock_shear_x: -50   # amount and direction to move to undock
 variable_z_hop:        12    # amount to lift for dock clearance
-variable_z_hop_speed:  20    # speed of z hop lift
 
 [probe]
 pin: sb:ENDSTOP0
@@ -125,6 +124,7 @@ gcode:
     {% set accel = printer['gcode_macro _probe_settings'].accel %}
     {% set dock_x = printer['gcode_macro _probe_settings'].dock_x %}
     {% set dock_wait = printer['gcode_macro _probe_settings'].dock_wait %}
+    {% set z_hop = printer['gcode_macro _probe_settings'].z_hop %}
 
     {% if not printer['gcode_macro query_probe_attached'].attached %}
         # check prerequisites
@@ -139,7 +139,11 @@ gcode:
         set_velocity_limit accel={accel}
 
         # travel to dock location
-        G0 X{dock_x} F{speed}
+        {% if 'z' in printer.toolhead.homed_axes and printer.gcode_move.gcode_position.z < z_hop %}
+           G0 X{dock_x} Z{z_hop} F{speed}
+        {% else %}
+           G0 X{dock_x} F{speed}
+        {% endif %}
 
         # deploy, wait, and retract probe dock
         deploy_probe_dock
@@ -162,6 +166,7 @@ gcode:
     {% set dock_x = printer['gcode_macro _probe_settings'].dock_x %}
     {% set dock_wait = printer['gcode_macro _probe_settings'].dock_wait %}
     {% set dock_shear_x = printer['gcode_macro _probe_settings'].dock_shear_x %}
+    {% set z_hop = printer['gcode_macro _probe_settings'].z_hop %}
 
     {% if printer['gcode_macro query_probe_attached'].attached %}
         # check prerequisites
@@ -176,7 +181,11 @@ gcode:
         set_velocity_limit accel={accel}
 
         # travel to dock location
-        G0 X{dock_x} F{speed}
+        {% if 'z' in printer.toolhead.homed_axes and printer.gcode_move.gcode_position.z < z_hop %}
+           G0 X{dock_x} Z{z_hop} F{speed}
+        {% else %}
+           G0 X{dock_x} F{speed}
+        {% endif %}
 
         # deploy and wait
         deploy_probe_dock
@@ -201,7 +210,6 @@ gcode:
     {% set speed = printer['gcode_macro _probe_settings'].speed * 60 %}
     {% set accel = printer['gcode_macro _probe_settings'].accel %}
     {% set z_hop = printer['gcode_macro _probe_settings'].z_hop %}
-    {% set z_hop_speed = printer['gcode_macro _probe_settings'].z_hop_speed * 60 %}
 
     {% set x_offset = printer.configfile.settings.probe.x_offset %}
     {% set y_offset = printer.configfile.settings.probe.y_offset %}
@@ -238,12 +246,9 @@ gcode:
         G90
         set_velocity_limit accel={accel}
 
-        # z hop
+        # set z to zero to allow z-hop in attach_probe
         {% if not 'z' in printer.toolhead.homed_axes %}
            set_kinematic_position z=0 set_homed=Z
-           G0 Z{z_hop} F{z_hop_speed}
-        {% elif printer.gcode_move.gcode_position.z < z_hop %}
-           G0 Z{z_hop} F{z_hop_speed}
         {% endif %}
 
         # attach the probe
@@ -257,8 +262,10 @@ gcode:
         # home Z
         G28 Z
 
-        # move to safe z and dock probe
-        G0 Z{z_hop} F{z_hop_speed}
+        # back off of bed
+        G0 Z{z_hop} F{speed}
+
+        # dock probe
         {% if not 'KEEP_PROBE' in params %}
           dock_probe back=1
         {% endif %}
