use new udev alias for usb klipper devices

--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -1,6 +1,6 @@
 # BTT SKR v1.3
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1768_0990FF06410C39AF3B05E95BC42000F5-if00
+serial: /dev/tty.klipper-0990FF06410C39AF3B05E95BC42000F5
 
 # Fly SB2040 v2
 [mcu sb]
