reorganize interface into own file, fix beeper

--- a/klipper-switchwire/macros/beeper.cfg
+++ b/klipper-switchwire/macros/beeper.cfg
@@ -3,9 +3,9 @@ gcode:
   {% set S = params.S|default(440)|float %}
   {% set P = params.P|default(100)|float %}
 
-  SET_PIN PIN=BEEPER VALUE=0.5 CYCLE_TIME={ 1.0 / S if S > 0 else 1 }
+  SET_PIN PIN=beeper VALUE=0.5 CYCLE_TIME={ 1.0 / S }
   G4 P{P}
-  SET_PIN PIN=BEEPER VALUE=0
+  SET_PIN PIN=beeper VALUE=0
 
 [gcode_macro JINGLE_START]
 gcode:
