--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -6,12 +6,19 @@ serial: /dev/tty.klipper-0990FF06410C39AF3B05E95BC42000F5
 [mcu sb]
 canbus_uuid: d271aa8d05c3
 
+# board pin aliases
 [include boards/*.cfg]
-[include macros/*.cfg]
-[include menu.cfg]
 
+# FIXME temporary
 [include stealthburner.cfg]
+
+# peripheral definitions and core behavior
+[include interface.cfg]
+[include menu.cfg]
 [include probe.cfg]
+
+# macros
+[include macros/*.cfg]
 
 [respond]
 
@@ -107,23 +114,3 @@ pid_kd: 405.23
 [verify_heater heater_bed]
 # normally 2.0 (yes, really)
 heating_gain: 0.6
-
-[display]
-lcd_type: emulated_st7920
-encoder_pins: ^EXP2_3, ^EXP2_5
-spi_software_miso_pin: EXP2_1
-spi_software_mosi_pin: EXP1_3
-spi_software_sclk_pin: EXP1_5
-en_pin: EXP1_4
-encoder_pins: ^EXP2_5, ^EXP2_3
-click_pin: ^!EXP1_2
-spi_speed: 1000000
-menu_timeout: 60
-
-[output_pin BEEPER]
-pin: EXP1_1
-pwm: True
-value: 0
-shutdown_value: 0
-# 440 Hz
-cycle_time: 0.00227272727
