stealthburner status led macros

--- a/klipper-switchwire/macros/heat-soak.cfg
+++ b/klipper-switchwire/macros/heat-soak.cfg
@@ -22,6 +22,7 @@ gcode:
 
   # turn on the bed
   SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={BED_TEMP}
+  SET_LEDS STATE=heating PUSH=1
   # run fan to circulate air
   M106 S255
   # put the nozzle in a good place to measure ambient temp
@@ -55,6 +56,7 @@ gcode:
   {% set stage = heat_soak.stage %}
   {% if stage == "heating" and printer[printer.toolhead.extruder].temperature >= heat_soak.target_temp %}
     {% set stage = "soaking" %}
+    SET_LEDS STATE=soaking
   {% endif %}
 
   # FIXME heating -> cancel if the toolhead doesn't keep rising
@@ -72,6 +74,7 @@ gcode:
 
   {% if stage in ("done", "cancel") %}
     # reset everything and print a message
+    SET_LEDS POP=1
     {% if stage == "cancel" %}
       {% set stage = "done" %}
       # turn off heaters and fan
