--- a/klipper-switchwire/macros/start-end.cfg
+++ b/klipper-switchwire/macros/start-end.cfg
@@ -4,6 +4,7 @@ gcode:
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
 
   # start heating bed
+  SET_LEDS STATE=heating
   M140 S{BED_TEMP}
   # use absolute coordinates
   G90
@@ -22,6 +23,7 @@ gcode:
   # heat nozzle
   M109 S{EXTRUDER_TEMP}
   # play a jolly start tone
+  SET_LEDS STATE=printing
   JINGLE_START
 
   # FIXME purge line better, this is just copy/paste prusa
@@ -51,6 +53,7 @@ gcode:
   # disable steppers
   M84
   # play a jolly end tone
+  SET_LEDS RESET=1
   JINGLE_END
 
 [gcode_macro START_PRINT]
