--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -24,6 +24,10 @@ canbus_uuid: d271aa8d05c3
 
 [idle_timeout]
 timeout: 1200
+gcode:
+  turn_off_heaters
+  M84
+  set_leds reset=1
 
 [printer]
 kinematics: corexz
