--- a/klipper-switchwire/probe.cfg
+++ b/klipper-switchwire/probe.cfg
@@ -205,7 +205,7 @@ gcode:
     query_probe_attached attached=0
 
 [homing_override]
-axes: z
+axes: xyz
 gcode:
     {% set speed = printer['gcode_macro _probe_settings'].speed * 60 %}
     {% set accel = printer['gcode_macro _probe_settings'].accel %}
@@ -231,6 +231,8 @@ gcode:
        {% set home_x, home_y, home_z = True, True, True %}
     {% endif %}
 
+    set_leds state=homing push=1
+
     # home X and Y as needed
     {% if home_x or (home_z and 'x' not in printer.toolhead.homed_axes) %}
        G28 X
@@ -253,6 +255,7 @@ gcode:
 
         # attach the probe
         attach_probe
+        set_leds state=probing push=1
 
         # move to the center
         {% set center_x = (mesh_max[0] + mesh_min[0]) / 2 %}
@@ -266,6 +269,7 @@ gcode:
         G0 Z{z_hop} F{speed}
 
         # dock probe
+        set_leds pop=1
         {% if not 'KEEP_PROBE' in params %}
           dock_probe back=1
         {% endif %}
@@ -275,3 +279,5 @@ gcode:
         set_velocity_limit accel={printer.configfile.settings.printer.max_accel}
         restore_gcode_state name=homing_override
     {% endif %}
+
+    set_leds pop=1
