dedicated heat.cfg and movement.cfg files

--- a/klipper-switchwire/heat.cfg
+++ b/klipper-switchwire/heat.cfg
@@ -1,21 +1,14 @@
-# RP2040 CPU temp
+# stealthburner RP2040 CPU temp
 [temperature_sensor SB_MCU]
 gcode_id: SB_MCU
 sensor_type: temperature_mcu
 sensor_mcu: sb
 
-# onboard ntc100k
+# stealthburner onboard ntc100k
 [temperature_sensor SB]
 gcode_id: SB
 sensor_type: NTC 100K MGB18-104F39050L32
 sensor_pin: sb:NTC
-
-# toolhead accelerometer
-[adxl345 sb]
-cs_pin: sb:SPI1_CS
-spi_software_sclk_pin: sb:SPI1_SCK
-spi_software_mosi_pin: sb:SPI1_MOSI
-spi_software_miso_pin: sb:SPI1_MISO
 
 # part fan
 [fan]
@@ -27,7 +20,6 @@ pin: sb:FAN1
 heater: extruder
 heater_temp: 50.0
 
-# FIXME these calibration bits, gear ratio, etc. are dummy values
 [extruder]
 step_pin: sb:E_STEP
 dir_pin: sb:E_DIR
@@ -54,3 +46,19 @@ max_extrude_cross_section: 1
 uart_pin: sb:E_UART
 stealthchop_threshold: 0
 run_current: 0.30
+
+[heater_bed]
+heater_pin: HB_PWM
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: THB
+min_temp: 0
+max_temp: 130
+control: pid
+pid_kp: 314.07
+pid_ki: 60.86
+pid_kd: 405.23
+
+# bed is slow, I think I broke it repairing the cable
+[verify_heater heater_bed]
+# normally 2.0 (yes, really)
+heating_gain: 0.4
