--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -9,16 +9,17 @@ canbus_uuid: d271aa8d05c3
 # board pin aliases
 [include boards/*.cfg]
 
-# FIXME temporary
-[include stealthburner.cfg]
-
 # peripheral definitions and core behavior
+[include heat.cfg]
 [include interface.cfg]
 [include menu.cfg]
+[include movement.cfg]
 [include probe.cfg]
 
 # macros
 [include macros/*.cfg]
+
+# some miscellaneous stuff that doesn't fit elsewhere
 
 [respond]
 
@@ -29,92 +30,9 @@ gcode:
   M84
   set_leds reset=1
 
-[printer]
-kinematics: corexz
-max_velocity: 300
-max_accel: 2000
-max_z_velocity: 50
-max_z_accel: 1000
-
-[stepper_x]
-# port labeled X on my control board is acting funky
-# (spontaneous resets) so use E1 instead.
-# (This might be fixed with a fixed bed cable.)
-
-# label X
-#step_pin: XSTP
-#dir_pin: XDIR
-#enable_pin: !XEN
-
-# label E1
-step_pin: E1STP
-dir_pin: E1DIR
-enable_pin: !E1EN
-
-microsteps: 64
-rotation_distance: 40
-endstop_pin: sb:ENDSTOP1
-position_endstop: 233
-position_min: -17
-position_max: 233
-homing_speed: 50
-
-[tmc2208 stepper_x]
-# label X
-#uart_pin: X_RX
-
-# label E1
-uart_pin: E1_RX
-
-run_current: 0.800
-#stealthchop_threshold: 999999
-
-[stepper_y]
-step_pin: YSTP
-dir_pin: YDIR
-enable_pin: !YEN
-microsteps: 64
-rotation_distance: 40
-endstop_pin: YM  # YP for Y-max
-position_endstop: 227
-position_min: -23
-position_max: 227
-homing_speed: 50
-
-[tmc2208 stepper_y]
-uart_pin: Y_RX
-run_current: 0.800
-#stealthchop_threshold: 999999
-
-[stepper_z]
-step_pin: ZSTP
-dir_pin: ZDIR
-enable_pin: !ZEN
-microsteps: 64
-rotation_distance: 40
-endstop_pin: probe:z_virtual_endstop
-position_min: -5
-position_max: 220
-homing_speed: 30
-second_homing_speed: 10
-
-[tmc2208 stepper_z]
-uart_pin: Z_RX
-run_current: 0.800
-#stealthchop_threshold: 999999
-
-[heater_bed]
-heater_pin: HB_PWM
-sensor_type: EPCOS 100K B57560G104F
-sensor_pin: THB
-min_temp: 0
-max_temp: 130
-control: pid
-pid_kp: 314.07
-pid_ki: 60.86
-pid_kd: 405.23
-
-# bed is slow, I think I broke it repairing the cable
-[verify_heater heater_bed]
-# normally 2.0 (yes, really)
-heating_gain: 0.4
+# toolhead accelerometer
+[adxl345 sb]
+cs_pin: sb:SPI1_CS
+spi_software_sclk_pin: sb:SPI1_SCK
+spi_software_mosi_pin: sb:SPI1_MOSI
+spi_software_miso_pin: sb:SPI1_MISO
