move [respond] to menu.cfg

--- a/klipper-switchwire/menu.cfg
+++ b/klipper-switchwire/menu.cfg
@@ -1,3 +1,6 @@
+# needed to enable RESPOND to echo lcd text to console
+[respond]
+
 # setting lcd text also echos to console
 [gcode_macro M117]
 rename_existing: M117.1
