rename led initialization to fix probe state bug

--- a/klipper-switchwire/macros/leds.cfg
+++ b/klipper-switchwire/macros/leds.cfg
@@ -61,7 +61,7 @@ gcode:
   set_led led=sb red={logo[0]} green={logo[1]} blue={logo[2]} white={logo[3]} index=1 transmit=1
 
 # do some initialization at startup
-[delayed_gcode initialize_probe]
+[delayed_gcode initialize_leds]
 initial_duration: 1
 gcode:
   set_leds state=idle
