filamend load and unload macros

--- a/klipper-switchwire/menu.cfg
+++ b/klipper-switchwire/menu.cfg
@@ -25,6 +25,25 @@ enable: {('virtual_sdcard' in printer)}
 name: SD Card
 newfirst: true
 
+# filament load and unload
+[menu __main __filament __loadf]
+type: disabled
+
+[menu __main __filament __loads]
+name: Load Filament
+type: command
+gcode:
+  load_filament
+
+[menu __main __filament __unloadf]
+type: disabled
+
+[menu __main __filament __unloads]
+name: Unload Filament
+type: command
+gcode:
+  unload_filament
+
 # shutdown with confirm
 [menu __main __octoprint __shutdown]
 type: list
