MK52 heated bed at 24V

--- a/klipper-switchwire/heat.cfg
+++ b/klipper-switchwire/heat.cfg
@@ -7,7 +7,7 @@ sensor_mcu: sb
 # stealthburner onboard ntc100k
 [temperature_sensor SB]
 gcode_id: SB
-sensor_type: NTC 100K MGB18-104F39050L32
+sensor_type: Generic 3950
 sensor_pin: sb:NTC
 
 # part fan
@@ -52,13 +52,8 @@ heater_pin: HB_PWM
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: THB
 min_temp: 0
-max_temp: 130
+max_temp: 110
 control: pid
-pid_kp: 314.07
-pid_ki: 60.86
-pid_kd: 405.23
-
-# bed is slow, I think I broke it repairing the cable
-[verify_heater heater_bed]
-# normally 2.0 (yes, really)
-heating_gain: 0.4
+pid_kp: 52.621
+pid_ki: 0.623
+pid_kd: 1110.951
