--- a/klipper-switchwire/movement.cfg
+++ b/klipper-switchwire/movement.cfg
@@ -36,7 +36,7 @@ enable_pin: !YEN
 
 microsteps: 64
 rotation_distance: 40
-endstop_pin: YM
+endstop_pin: YP
 position_endstop: 227
 position_min: -23
 position_max: 227
